@@ -49,8 +49,8 @@ on how to use it.
 <p>
 <b>Download tslib</b>
 <p>
-tslib only provides source archives. The latest release is version <b>1.15</b>
-including libts library version 0.9.0, released on the <b>11th of January 2018</b>.
+tslib only provides source archives. The latest release is version <b>1.16</b>
+including libts library version 0.9.1, released on the <b>19th of April 2018</b>.
 Get it from our <a href="https://github.com/kergoth/tslib/releases">release page</a>
 (<a href="https://gitlab.com/tslib/tslib/tags">mirror</a>).
 
